# rust-tron

./: Cargo.toml  README.md  mainnet-wallet-cli.sh  rustfmt.toml
.github/workflows/: rust.yml
crypto/: Cargo.toml
docs/: trc20.md
keys/: Cargo.toml
keys/src/: address.rs  keypair.rs  private.rs  public.rs
merkle-tree/: Cargo.toml
proto/: Cargo.toml  build.rs
proto/src/: Contract.rs  Discover.rs  Tron.rs  api.rs  lib.rs
wallet/: Cargo.toml
wallet-cli/: Cargo.toml
wallet-cli/src/: cli.yml  error.rs  main.rs
wallet-cli/src/commands/: batch.rs  key.rs  mod.rs  shielded.rs
wallet-cli/src/commands/contract/: call.rs  create.rs
wallet-cli/src/commands/get/: contract.rs  mod.rs  transaction.rs
wallet-cli/src/commands/list/: mod.rs
wallet-cli/src/utils/: Events.sol  abi.rs  events.abi  jsont.rs  mod.rs  trx.rs  walletd.rs
wallet/src/: crypto.rs  lib.rs
walletd/: Cargo.toml
walletd/src/: main.rs
ztron/: Cargo.toml
