[package]
name = "proto"
version = "0.1.0"
edition = "2021"
publish = false

[features]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tonic = { version = "0.12.3", features = ["tls"] }
prost = "0.13.4"
prost-types = "0.13.4"

[lib]
test = false
doctest = false

[build-dependencies]
protobuf-codegen = "3.7.1"
tonic-build = "0.12.3"
# protoc-bin-vendored = "3.1.0"

# protoc-rust = "2.18.0"
# protoc-rust-grpc = "0.8.3"


