[package]
name = "wallet-cli"
version = "0.1.0"
authors = ["Andelf <andelf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2", features = ["yaml"] }
futures = "0.3"
serde_json = "1.0"
hex = "0.4"
chrono = "0.4"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
rand = "0.8"
itertools = "0.14"
rpassword = "7"
ethabi = "12"
lazy_static = "1.4"
primitive-types ="0.13"

proto = { path = "../proto" }
keys = { path = "../keys" }
walletd = { path = "../walletd" }
# ztron = { git = "https://github.com/opentron/opentron" }
