[package]
name = "wallet"
version = "0.1.0"
authors = ["andelf <andelf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = "1.0"
thiserror = "2"
aes = "0.8"
cfb-mode = "0.8"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

keys = { path = "../keys" }
# ztron = { git = "https://github.com/opentron/opentron" }
