[package]
name = "walletd"
version = "0.1.0"
authors = ["Shuyu WANG <andelf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3"
bytes = "1.0"
prost = "0.6"

tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }

keys = { path = "../keys" }
wallet = { path = "../wallet" }
ztron = { git = "https://github.com/opentron/opentron" }

[build-dependencies]
tonic-build = "0.3"

[target.'cfg(unix)'.dependencies]
daemonize = "0.4"
